styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body,
html {
  height: 100%;
  font-family: Arial, sans-serif;
  background-color: #000;
}

.slider-container {
  position: relative;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
}

.slider {
  display: flex;
  height: 100%;
  transition: transform 1.5s ease-in-out;
}

.slide {
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  height: 100%;
  flex: 0 0 6%;
  transition: flex 1.5s ease;
  position: relative;
  cursor: pointer;
}

.slide.active {
  flex: 1;
  background: transparent linear-gradient(180deg, #000000 0%, #00000000 100%) 0% 0% no-repeat padding-box;
}

.text-container {
  position: absolute;
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 100vh;
  left: 250px;
  text-align: left;
  color: #fff;
  opacity: 0;
  transition: opacity 0.5s ease-in;
  z-index: 10;
  min-height: 500px;
  min-width: 600px;
}

.slide.active .text-container {
  opacity: 1;
}

.title {
  font-family: "Bebas Neue", sans-serif;
  font-size: 14px;
  letter-spacing: 9.52px;
  margin-left: 3px;
  margin-bottom: 19px;
}

.description {
  font-family: "Poppins", Medium;
  font-size: 55px;
  text-shadow: 0px 0px 16px #0000005c;
  line-height: 1;
  margin-bottom: 31px;
}

.button-container {
  display: flex;
  justify-content: left;
  margin-top: 20px;
  margin-bottom: 200px;
}

.btn {
  font-family: "Poppins", Medium;
  font-size: 14px;
  width: 174px;
  height: 48px;
  background: transparent;
  border: 1px solid #fff;
  border-radius: 7px;
  color: #fff;
  opacity: 1;
  margin-right: 15px;
  margin-left: 3px;
  cursor: pointer;
  transition: background-color 0.3s ease, color 0.3s ease;
}

.btn:hover {
  background-color: #fff;
  color: black;
}

.number {
  font-family: "Bebas Neue", sans-serif;
  font-size: 20px;
  font-weight: normal;
  -webkit-text-stroke: 1px #ffffff;
  position: absolute;
  bottom: 10%;
  left: 50%;
  transform: translate(-50%, -50%);
  display: flex;
  justify-content: center;
  align-items: center;
  letter-spacing: -0.4px;
  color: #fff;
  opacity: 1;
  text-shadow: none;
  background-color: transparent;
  transition: all 0.5s ease;
}

.slide.active .number {
  font-size: 78px;
  color: transparent;
  top: auto;
  right: 20px;
  left: auto;
  margin-left: 15px;
  transform: none;
  bottom: 0;
  margin-bottom: 65px;
}

.social-icons {
  position: absolute;
  bottom: 104px;
  left: 83px;
  margin: 50px;
  display: flex;
  flex-direction: row;
  gap: 30px;
  z-index: 10;
}

.social-icons a {
  color: #fff;
  font-size: 1.5rem;
  text-decoration: none;
  transition: color 0.3s;
}

.social-icons a:hover {
  color: #007bff;
}

.horizontal-line {
  position: absolute;
  top: 31%;
  width: 100px;
  height: 2px;
  background-color: #21e26e;
  bottom: 620px;
}

.overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: transparent linear-gradient(180deg, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0) 100%) no-repeat padding-box;
  z-index: 5;
  pointer-events: none;
}

/* @media (max-width: 1024px) {

  .title {
    font-size: 20px;
    text-align: center;
  }

  .description {
    font-size: 45px;
    text-align: center;
  }

  .button-container {
    display: flex;
    justify-content: center;
    margin-top: 20px;
    margin-bottom: 200px;
  }

  .text-container {
    left: 10px; 
    right: 10px; 
  }
}

@media (max-width: 800px) {
  .horizontal-line {
    position: absolute;
    top: 31%;
    width: 5%;
    height: 2px;
    background-color: #21e26e;
    bottom: 620px;
  }
} */

